--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "not ie < 9"
   ],
   "dependencies": {
+    "antd": "^2.9.1",
     "babel-polyfill": "^6.22.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
@@ -43,14 +44,18 @@
     "history": "^4.5.1",
     "isomorphic-style-loader": "^1.1.0",
     "jsonwebtoken": "^7.2.1",
+    "lodash": "^4.17.4",
     "material-ui": "^0.17.1",
     "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
+    "mobx-react-devtools": "^4.2.11",
     "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
     "pretty-error": "^2.0.2",
     "prop-types": "^15.5.6",
     "query-string": "^4.3.1",
     "react": "^15.5.4",
+    "react-docgen": "^2.14.0",
     "react-dom": "^15.4.2",
     "react-draggable": "^2.2.3",
     "react-grid-layout": "^0.14.4",
@@ -73,6 +78,7 @@
     "babel-loader": "^6.2.10",
     "babel-plugin-rewire": "^1.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-display-name": "^6.23.0",
     "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-optimize": "^1.0.1",
@@ -83,10 +89,11 @@
     "babel-types": "^6.22.0",
     "browser-sync": "^2.18.7",
     "chai": "^3.5.0",
+    "chai-enzyme": "^0.6.1",
     "chokidar": "^1.6.1",
     "css-loader": "^0.28.0",
     "editorconfig-tools": "^0.1.1",
-    "enzyme": "^2.7.1",
+    "enzyme": "^2.8.2",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-loader": "^1.6.1",
@@ -97,6 +104,7 @@
     "file-loader": "^0.10.0",
     "front-matter": "^2.1.2",
     "glob": "^7.1.1",
+    "jsdom": "^9.12.0",
     "json-loader": "^0.5.4",
     "lint-staged": "^3.3.0",
     "markdown-it": "^8.2.2",
@@ -126,7 +134,7 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "redbox-react": "^1.3.3",
     "rimraf": "^2.5.4",
-    "sinon": "^2.0.0-pre.5",
+    "sinon": "^2.1.0",
     "style-loader": "^0.16.1",
     "stylefmt": "^5.1.1",
     "stylelint": "^7.8.0",
@@ -160,7 +168,7 @@
     "lint:staged": "lint-staged",
     "lint": "npm run lint:js && npm run lint:css",
     "test": "mocha \"src/**/*.test.js\" --require babel-register --require test/setup.js",
-    "test:watch": "npm run test -- --reporter min --watch",
+    "test:watch": "npm run test -- --reporter nyan --watch",
     "clean": "babel-node tools/run clean",
     "copy": "babel-node tools/run copy",
     "bundle": "babel-node tools/run bundle",
@@ -169,6 +177,7 @@
     "deploy": "babel-node tools/run deploy",
     "render": "babel-node tools/run render",
     "serve": "babel-node tools/run runServer",
-    "start": "babel-node tools/run start"
+    "start": "babel-node tools/run start",
+    "docgen": "babel-node tools/run docgen"
   }
 }
