--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "express-jwt": "^5.1.0",
     "fastclick": "^1.0.6",
     "history": "^4.5.1",
-    "isomorphic-style-loader": "^1.1.0",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.1",
@@ -58,12 +57,12 @@
     "react-docgen": "^2.14.0",
     "react-dom": "^15.4.2",
     "react-draggable": "^2.2.3",
-    "react-grid-layout": "^0.14.4",
     "react-helmet": "^5.0.3",
     "react-perimeter": "^0.3.0",
-    "react-router": "^4.1.0",
-    "react-router-dom": "^4.1.0",
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "react-tappable": "^0.8.4",
     "sequelize": "^3.30.1",
     "source-map-support": "^0.4.11",
     "sqlite3": "^3.1.8",
@@ -76,6 +75,7 @@
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
+    "babel-plugin-import": "^1.1.1",
     "babel-plugin-rewire": "^1.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-display-name": "^6.23.0",
@@ -101,6 +101,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
     "front-matter": "^2.1.2",
     "glob": "^7.1.1",
@@ -110,6 +111,7 @@
     "markdown-it": "^8.2.2",
     "mkdirp": "^0.5.1",
     "mocha": "^3.2.0",
+    "node-style-loader": "^0.0.1-alpha",
     "pleeease-filters": "^3.0.0",
     "postcss": "^5.2.16",
     "postcss-calc": "^5.3.1",
