--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "not ie < 9"
   ],
   "dependencies": {
-    "antd": "^2.9.1",
+    "antd": "^2.10.0",
     "babel-polyfill": "^6.22.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
+    "core-decorators": "^0.19.0",
     "core-js": "^2.4.1",
     "express": "^4.14.1",
     "express-jwt": "^5.1.0",
@@ -53,7 +54,10 @@
     "pretty-error": "^2.0.2",
     "prop-types": "^15.5.6",
     "query-string": "^4.3.1",
+    "rasterizehtml": "^1.2.4",
     "react": "^15.5.4",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
     "react-docgen": "^2.14.0",
     "react-dom": "^15.4.2",
     "react-draggable": "^2.2.3",
@@ -87,7 +91,7 @@
     "babel-register": "^6.22.0",
     "babel-template": "^6.22.0",
     "babel-types": "^6.22.0",
-    "browser-sync": "^2.18.7",
+    "browser-sync": "^2.18.8",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
     "chokidar": "^1.6.1",
@@ -101,6 +105,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
+    "express-print-routes": "^1.0.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.0",
     "front-matter": "^2.1.2",
@@ -142,10 +147,10 @@
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.3.3",
+    "webpack": "^2.5.1",
     "webpack-bundle-analyzer": "^2.3.0",
-    "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-hot-middleware": "^2.18.0",
     "write-file-webpack-plugin": "^3.4.2"
   },
   "pre-commit": "lint:staged",
