--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   ],
   "dependencies": {
     "antd": "^2.10.0",
+    "axios": "^0.16.1",
     "babel-polyfill": "^6.22.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
@@ -45,10 +46,13 @@
     "history": "^4.5.1",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
+    "log4js": "^1.1.1",
     "material-ui": "^0.17.1",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "mobx-react-devtools": "^4.2.11",
+    "mobx-utils": "^2.0.1",
+    "mongodb": "^2.2.26",
     "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
     "pretty-error": "^2.0.2",
@@ -68,6 +72,8 @@
     "react-tap-event-plugin": "^2.0.1",
     "react-tappable": "^0.8.4",
     "sequelize": "^3.30.1",
+    "serializr": "^1.1.11",
+    "socket.io": "^2.0.1",
     "source-map-support": "^0.4.11",
     "sqlite3": "^3.1.8",
     "uuid": "^3.0.1"
@@ -80,6 +86,7 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-import": "^1.1.1",
+    "babel-plugin-module-resolver": "^2.7.0",
     "babel-plugin-rewire": "^1.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-display-name": "^6.23.0",
@@ -100,6 +107,7 @@
     "enzyme": "^2.8.2",
     "eslint": "^3.15.0",
     "eslint-config-airbnb": "^14.1.0",
+    "eslint-import-resolver-babel-module": "^3.0.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-css-modules": "^2.2.0",
     "eslint-plugin-import": "^2.2.0",
