--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "classnames": "^2.2.5",
+    "colors": "^1.1.2",
     "cookie-parser": "^1.4.3",
     "core-decorators": "^0.19.0",
     "core-js": "^2.4.1",
@@ -44,6 +45,7 @@
     "express-jwt": "^5.1.0",
     "fastclick": "^1.0.6",
     "history": "^4.5.1",
+    "html-webpack-plugin": "^2.28.0",
     "jsonwebtoken": "^7.2.1",
     "lodash": "^4.17.4",
     "log4js": "^1.1.1",
@@ -74,9 +76,11 @@
     "sequelize": "^3.30.1",
     "serializr": "^1.1.11",
     "socket.io": "^2.0.1",
+    "socket.io-client": "^2.0.1",
     "source-map-support": "^0.4.11",
     "sqlite3": "^3.1.8",
-    "uuid": "^3.0.1"
+    "uuid": "^3.0.1",
+    "yargs": "^8.0.1"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
