--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/chengjianhua/templated-operating-system#readme",
   "engines": {
-    "node": ">=6.5",
+    "node": "6.5",
     "npm": ">=3.10"
   },
   "browserslist": [
@@ -36,8 +36,8 @@
     "babel-polyfill": "^6.22.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
+    "chalk": "^1.1.3",
     "classnames": "^2.2.5",
-    "colors": "^1.1.2",
     "cookie-parser": "^1.4.3",
     "core-decorators": "^0.19.0",
     "core-js": "^2.4.1",
@@ -46,7 +46,11 @@
     "fastclick": "^1.0.6",
     "history": "^4.5.1",
     "html-webpack-plugin": "^2.28.0",
+    "jsdom": "^11.0.0",
     "jsonwebtoken": "^7.2.1",
+    "keymirror": "^0.1.1",
+    "kue": "^0.11.5",
+    "kue-ui-express": "^1.0.2",
     "lodash": "^4.17.4",
     "log4js": "^1.1.1",
     "material-ui": "^0.17.1",
@@ -66,9 +70,7 @@
     "react-dnd-html5-backend": "^2.4.1",
     "react-docgen": "^2.14.0",
     "react-dom": "^15.4.2",
-    "react-draggable": "^2.2.3",
     "react-helmet": "^5.0.3",
-    "react-perimeter": "^0.3.0",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
@@ -98,11 +100,10 @@
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-template": "^6.22.0",
     "babel-types": "^6.22.0",
-    "browser-sync": "^2.18.8",
+    "browser-sync": "^2.18.12",
     "chai": "^3.5.0",
     "chai-enzyme": "^0.6.1",
     "chokidar": "^1.6.1",
