remove the redis and mongodb config

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ coverage
 .lock-wscript
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
-build
+/build
 
 # Dependency directories
 node_modules
@@ -43,4 +43,5 @@ jspm_packages
 .DS_Store
 
 # Secret
-db.json
+mongodb.json
+redis.json
